--- a/styles.css
+++ b/styles.css
@@ -43,11 +43,11 @@ h3 {
 }
 
 main ul {
-   display: grid;
-   width: 30rem;
-   height: 30rem;
+   display: none;
    padding: 0;
-   border: 3px solid brown;
+   width: 3rem;
+   height: 3rem;
+   background-color: black;
 }
 
 #simulate-button {
