--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ main ul {
    width: 3rem;
    height: 3rem;
    background-color: black;
+   border: 2px solid black;
 }
 
 #simulate-button {
@@ -60,4 +61,9 @@ main ul {
 #simulate-button:hover {
    background-color: rgb(251, 216, 140);
    cursor: pointer;
+}
+
+.block {
+   background-color: brown;
+   border: 2px solid black;
 }
