--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,22 @@ header ul li {
 }
 
 #enter-button {
-   border: 2px solid black;
+   border: 4px solid black;
    padding: 0.3rem;
    border-radius: 5px;
+   transition: background-color 0.3s ease-in-out;
 }
 #enter-button:hover {
-   background-color: rgb(251, 216, 140);
+   background-color: brown;
    cursor: pointer;
+}
+
+#loading-text {
+   margin: 5rem;
+   display: none;
+}
+.dot {
+   color: white;
 }
 
 header ul li h2,
@@ -32,9 +41,9 @@ h3 {
 }
 .boxes {
    display: block;
-   height: 2rem;
-   width: 2.5rem;
-   font-size: 1.3rem;
+   height: 2.5rem;
+   width: 3rem;
+   font-size: 1.7rem;
    text-align: center;
    border-radius: 5px;
    background-color: black;
@@ -49,17 +58,19 @@ main ul {
    height: 3rem;
    background-color: black;
    border: 2px solid black;
+   border-radius: 5px;
 }
 
 #simulate-button {
    display: none;
-   border: 2px solid black;
+   border: 4px solid black;
    padding: 0.5rem;
    border-radius: 8px;
+   transition: background-color 0.3s ease-in-out;
 }
 
 #simulate-button:hover {
-   background-color: rgb(251, 216, 140);
+   background-color: brown;
    cursor: pointer;
 }
 
