--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,14 @@ main ul {
    box-sizing: border-box;
 }
 
+footer {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
+}
+
 #simulate-button {
    display: none;
    border: 4px solid black;
@@ -78,4 +86,21 @@ main ul {
 .block {
    background-color: brown;
    border: 2px solid black;
+}
+
+#disclaimer {
+   width: 50rem;
+   border: 4px solid black;
+   padding: 1rem;
+   border-radius: 8px;
+}
+#disclaimer a {
+   color: brown;
+   transition: color 3s ease-in-out;
+}
+#disclaimer a:hover {
+   color: rgb(224, 52, 52);
+}
+#disclaimer #note {
+   color: rgb(102, 21, 21);
 }
