--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,8 @@ footer,
 
 .preBlocks:hover {
    background-color: rgb(58, 54, 54);
+   border: 2px solid black;
+   cursor: pointer;
 }
 
 .obstacle {
