--- a/styles.css
+++ b/styles.css
@@ -57,8 +57,8 @@ main ul {
    width: 3rem;
    height: 3rem;
    background-color: black;
-   border: 2px solid black;
-   border-radius: 5px;
+   border: 2px solid rgb(239, 213, 13);
+   border-radius: 4px;
    box-sizing: border-box;
 }
 
@@ -101,7 +101,6 @@ footer,
 
 .obstacle {
    background-color: rgb(239, 213, 13);
-   border: 2px solid black;
 }
 
 #disclaimer {
